--- a/navigation.html
+++ b/navigation.html
@@ -8,10 +8,10 @@
             <p id="description" class="description">여행을 좋아하는 개발자</p>
         </div>
         <div class="menu">
-            <a href="#mypage">마이페이지</a>
-            <a href="#travel">여행 일정 공유</a>
-            <a href="#login">로그인/로그아웃</a>
-            <a href="#signup">회원가입</a>
+            <a href="mypage.html">마이페이지</a>
+            <a href="travel.html">여행 일정 공유</a>
+            <a href="login.html">로그인/로그아웃</a>
+            <a href="signup.html">회원가입</a>
         </div>
     </aside>
 </div>
