--- a/signup.html
+++ b/signup.html
@@ -1,36 +1,39 @@
 <!DOCTYPE html>
 <html lang="ko">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pick Us</title>
-    <link rel="stylesheet" href="styles/calendar.css">
+    <link rel="stylesheet" href="styles/signup.css">
 </head>
 
 <body>
     <div id="header"></div>
-    <main> <!-- 메인 콘텐츠 영역을 나타냄, navigation 바랑 달력을 같이 묶어서 css스타일 적용시킴, css 파일 맨 밑에 있으니 참고-->
+    <div class="container">
         <div id="navigation"></div>
-        <div class="wrapper">
-            <div class="calendar">
-                <div class="navContainer">
-                    <div class="year">
-                        <button class="last_year"> &lt </button>
-                        <p class="current-date year-date"></p>
-                        <button class="next_year"> &gt </button>
-                    </div>
-                    <div class="month">
-                        <button class="last_month"> &lt </button>
-                        <p class="current-date month-date"></p>
-                        <button class="next_month"> &gt </button>
-                    </div>
-                </div>
-                <ul class="weeks"></ul>
-                <ul class="days"></ul>
+        <div id="navigation"></div>
+        <section>
+        <form>
+            <h2>회원가입</h2>
+            <label for="nickname">닉네임</label>
+            <input type="text" id="nickname" placeholder="Value" required>
+
+            <label for="id">아이디</label>
+            <input type="text" id="id" placeholder="ID" required>
+
+            <label for="password">비밀번호</label>
+            <input type="password" id="password" placeholder="PW" required>
+
+            <label for="confirm-password">비밀번호 재입력</label>
+            <input type="password" id="confirm-password" placeholder="PW" required>
+
+            <div class="buttons">
+                <button type="button" class="cancel">취소</button>
+                <button type="submit" class="signup">회원가입</button>
             </div>
-        </div>
-    </main>
+        </form>
+        </section>
+    </div>
     <div id="footer"></div>
 </body>
 
@@ -61,7 +64,4 @@
     }
     document.addEventListener('DOMContentLoaded', loadHTML);
 </script>
-
-<script src="scripts/calendar.js"></script>
-
 </html>
