--- a/login.html
+++ b/login.html
@@ -31,12 +31,6 @@
             .then(response => response.text())
             .then(data => {
                 document.getElementById('header').innerHTML = data;
-                const today = new Date();
-                const year = today.getFullYear();
-                const month = String(today.getMonth() + 1).padStart(2, '0');
-                const day = String(today.getDate()).padStart(2, '0');
-                const formattedDate = `${year} / ${month} / ${day}`;
-
                 document.getElementById('date').textContent = formattedDate;
             });
         fetch('navigation.html')
@@ -52,5 +46,6 @@
     }
     document.addEventListener('DOMContentLoaded', loadHTML);
 </script>
+<script src="scripts/header.js"></script>
 
 </html>
