--- a/header.html
+++ b/header.html
@@ -1,6 +1,8 @@
 <link rel="stylesheet" href="styles/header.css">
 <header>
-    <img src="res/pick us!.png" width="300"></img>
+    <a href="calendar.html">
+        <img src="res/pick us!.png" width="300" alt="Pick Us!">
+    </a>
     <div id="date" class="date"></div>
 </header>
 <script src="scripts/header.js"></script>
