--- a/signup.html
+++ b/signup.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,25 +14,25 @@
         <div id="navigation"></div>
         <div id="navigation"></div>
         <section>
-        <form>
-            <h2>회원가입</h2>
-            <label for="nickname">닉네임</label>
-            <input type="text" id="nickname" placeholder="Value" required>
+            <form>
+                <h2>회원가입</h2>
+                <label for="nickname">닉네임</label>
+                <input type="text" id="nickname" placeholder="Value" required>
 
-            <label for="id">아이디</label>
-            <input type="text" id="id" placeholder="ID" required>
+                <label for="id">아이디</label>
+                <input type="text" id="id" placeholder="ID" required>
 
-            <label for="password">비밀번호</label>
-            <input type="password" id="password" placeholder="PW" required>
+                <label for="password">비밀번호</label>
+                <input type="password" id="password" placeholder="PW" required>
 
-            <label for="confirm-password">비밀번호 재입력</label>
-            <input type="password" id="confirm-password" placeholder="PW" required>
+                <label for="confirm-password">비밀번호 재입력</label>
+                <input type="password" id="confirm-password" placeholder="PW" required>
 
-            <div class="buttons">
-                <button type="button" class="cancel">취소</button>
-                <button type="submit" class="signup">회원가입</button>
-            </div>
-        </form>
+                <div class="buttons">
+                    <button type="button" class="cancel">취소</button>
+                    <button type="submit" class="signup">회원가입</button>
+                </div>
+            </form>
         </section>
     </div>
     <div id="footer"></div>
@@ -43,12 +44,6 @@
             .then(response => response.text())
             .then(data => {
                 document.getElementById('header').innerHTML = data;
-                const today = new Date();
-                const year = today.getFullYear();
-                const month = String(today.getMonth() + 1).padStart(2, '0');
-                const day = String(today.getDate()).padStart(2, '0');
-                const formattedDate = `${year} / ${month} / ${day}`;
-
                 document.getElementById('date').textContent = formattedDate;
             });
         fetch('navigation.html')
@@ -64,4 +59,6 @@
     }
     document.addEventListener('DOMContentLoaded', loadHTML);
 </script>
+<script src="scripts/header.js"></script>
+
 </html>
