[FIX] addSchedule <form> 수정
왼쪽 오른쪽 <form> 태그로 나누었다

--- a/addSchedule.html
+++ b/addSchedule.html
@@ -14,7 +14,6 @@
         <div id="navigation"></div>
         <form class="addSchedule">
             <div class="schedule-column-1">
-                <section>
                     <h1>여행 정보 입력</h1>
                     <div class="input-group">
                         <label for="country">여행 나라</label>
@@ -43,8 +42,9 @@
                         <input type="number" id="budget" name="budget" placeholder="예상 지출을 입력하세요" required>
                     </div>
             </div>
-            </section>
+            </form>
 
+            <form class="timetableList">
             <section>
                 <div class="schedule-column-2">
                     <div class="addScheduleTime">
